--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -7,5 +7,10 @@
     .title {
         margin: 10px 0;
     }
+
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
