--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -10,20 +10,17 @@
   top: 90px;
   right: 40px;
   z-index: 5;
-
-  .cart-items {
-    height: 240px;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-  }
-
-  button {
-    margin-top: auto;
-  }
-
-  .empty-message {
-      font-size: 18px;
-      margin: 50px auto;
-  }
+}
+.cart-dropdown .cart-items {
+  height: 240px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+.cart-dropdown button {
+  margin-top: auto;
+}
+.cart-dropdown .empty-message {
+  font-size: 18px;
+  margin: 50px auto;
 }
